Update FederatedDeleteProvider.java